Create ordered list

--- a/recipes/Cinnamon_Rolls.html
+++ b/recipes/Cinnamon_Rolls.html
@@ -11,14 +11,16 @@
 <img src="/home/ryans/odin-links-and-images/images/cinnamonroll.jpeg" alt="Cinnamon Roll Picture" height="250" width="275"
 
 <ol> 
-    For the dough:
-    ¾ cup warm milk (whole milk or 2% preferred) (110 degrees F)
-    2 ¼ teaspoons quick rise or active yeast (1/4-ounce package yeast)
-    ¼ cup granulated sugar
-    1 egg plus 1 egg yolk, at room temperature
-    ¼ cup butter, melted (I prefer salted, but unsalted works, too)
-    3 cups bread flour, plus more for dusting
-    3/4 teaspoon salt
+
+    
+    <li>For the dough:</li>
+    <li> ¾ cup warm milk (whole milk or 2% preferred) (110 degrees F)</li>
+    <li>2 ¼ teaspoons quick rise or active yeast (1/4-ounce package yeast)</li>
+        <li>¼ cup granulated sugar</li>
+            <li>1 egg plus 1 egg yolk, at room temperature</li>
+                <li>¼ cup butter, melted (I prefer salted, but unsalted works, too)</li>
+                    <li>3 cups bread flour, plus more for dusting</li>
+                        <li>3/4 teaspoon salt</li>
 
     
     For the filling:
