--- a/recipes/Cinnamon_Rolls.html
+++ b/recipes/Cinnamon_Rolls.html
@@ -8,7 +8,7 @@
 <body>
 
 <h1>Cinnamon Rolls</h1>
-<img src="/home/ryans/odin-links-and-images/images/cinnamonroll.jpeg" alt="Cinnamon Roll Picture" height="250" width="275"
+<img src="https://hips.hearstapps.com/hmg-prod/images/cinnamon-rolls-index-64777a26dea4f.jpg?crop=0.6667780190412561xw:1xh;center,top&resize=1200:*" alt="Cinnamon Roll Picture" height="250" width="275"
 
 <ol> 
 
