--- a/recipes/Cinnamon_Rolls.html
+++ b/recipes/Cinnamon_Rolls.html
@@ -11,17 +11,17 @@
 <h1>Cinnamon Rolls</h1>
 <img src="https://hips.hearstapps.com/hmg-prod/images/cinnamon-rolls-index-64777a26dea4f.jpg?crop=0.6667780190412561xw:1xh;center,top&resize=1200:*" alt="Cinnamon Roll Picture" height="250" width="275"
    
-<p>
-    
-<li>For the dough:</li>
-    
-    <li> ¾ cup warm milk (whole milk or 2% preferred) (110 degrees F)</li>
-    <li>2 ¼ teaspoons quick rise or active yeast (1/4-ounce package yeast)</li>
-        <li>¼ cup granulated sugar</li>
-            <li>1 egg plus 1 egg yolk, at room temperature</li>
-                <li>¼ cup butter, melted (I prefer salted, but unsalted works, too)</li>
-                    <li>3 cups bread flour, plus more for dusting</li>
-                        <li>3/4 teaspoon salt</li>
+<p> 
+For the dough:
+    <ol>
+    ¾ cup warm milk (whole milk or 2% preferred) (110 degrees F)
+    2 ¼ teaspoons quick rise or active yeast (1/4-ounce package yeast)
+    ¼ cup granulated sugar
+    1 egg plus 1 egg yolk, at room temperature
+    ¼ cup butter, melted (I prefer salted, but unsalted works, too)
+    3 cups bread flour, plus more for dusting
+    3/4 teaspoon salt
+</ol>
                     </p>
 
     <p>
