--- a/recipes/Cinnamon_Rolls.html
+++ b/recipes/Cinnamon_Rolls.html
@@ -24,17 +24,19 @@
                     </p>
 
     <p>
-    For the filling:
-    2/3 cup dark brown sugar (light brown sugar also works)
-    1 ½ tablespoons ground cinnamon
-    ¼ cup butter, softened
+        For the filling:
+            <li>2/3 cup dark brown sugar (light brown sugar also works)</li>
+                <li>1 ½ tablespoons ground cinnamon</li>
+                    <li>¼ cup butter, softened</li>
     </p>
     
+    <p>
     For the cream cheese frosting:
     4 oz cream cheese, softened
     3 tablespoons butter, softened
     ¾ cup powdered sugar
     ½ teaspoon vanilla extract
+</p>
     
     Instructions
     Warm milk to around 110 degrees F. I like to do this by placing milk in a microwave safe bowl and microwaving it for 40-45 seconds. It should be like warm bath water. Transfer warm milk to the bowl of an electric mixer and sprinkle yeast on top. Add in sugar, egg, egg yolk and melted butter. Mix until well combined. Next stir in flour and salt with a wooden spoon until a dough begins to form.
