--- a/recipes/Cinnamon_Rolls.html
+++ b/recipes/Cinnamon_Rolls.html
@@ -13,7 +13,8 @@
    
     
 
-            For the dough:
+            <p>For the dough:
+            <ol>
             <li> ¾ cup warm milk (whole milk or 2% preferred) (110 degrees F)</li>
              <li>2 ¼ teaspoons quick rise or active yeast (1/4-ounce package yeast)</li>
              <li>¼ cup granulated sugar</li>
@@ -21,8 +22,9 @@
              <li>¼ cup butter, melted (I prefer salted, but unsalted works, too)</li>
              <li>3 cups bread flour, plus more for dusting</li>
              <li>3/4 teaspoon salt</li>
-        </p>
-
+            </ol>
+            </p>
+        
     <p>
         For the filling:
             <li>2/3 cup dark brown sugar (light brown sugar also works)</li>
