--- a/recipes/Cinnamon_Rolls.html
+++ b/recipes/Cinnamon_Rolls.html
@@ -13,7 +13,8 @@
    
     
 
-            <p>For the dough:
+            <p>
+                For the dough:
             <ol>
             <li> ¾ cup warm milk (whole milk or 2% preferred) (110 degrees F)</li>
              <li>2 ¼ teaspoons quick rise or active yeast (1/4-ounce package yeast)</li>
