Attempt to move "for the dough" under the img file

--- a/recipes/Cinnamon_Rolls.html
+++ b/recipes/Cinnamon_Rolls.html
@@ -11,9 +11,7 @@
 <h1>Cinnamon Rolls</h1>
 <img src="https://hips.hearstapps.com/hmg-prod/images/cinnamon-rolls-index-64777a26dea4f.jpg?crop=0.6667780190412561xw:1xh;center,top&resize=1200:*" alt="Cinnamon Roll Picture" height="250" width="275"   
 
-<p>
- 
-            For the dough: 
+<h1>For the dough:</h1>
             <ol>
             <li> ¾ cup warm milk (whole milk or 2% preferred) (110 degrees F)</li>
              <li>2 ¼ teaspoons quick rise or active yeast (1/4-ounce package yeast)</li>
@@ -23,8 +21,6 @@
              <li>3 cups bread flour, plus more for dusting</li>
              <li>3/4 teaspoon salt</li>
             </ol> 
-        
-        </p>
         
     <p>
         For the filling:
