--- a/recipes/Cinnamon_Rolls.html
+++ b/recipes/Cinnamon_Rolls.html
@@ -31,11 +31,12 @@
     </p>
     
     <p>
-    For the cream cheese frosting:
-    4 oz cream cheese, softened
-    3 tablespoons butter, softened
-    ¾ cup powdered sugar
-    ½ teaspoon vanilla extract
+    <ul>For the cream cheese frosting:
+   <li>4 oz cream cheese, softened</li>
+   <li>3 tablespoons butter, softened</li>
+   <li>¾ cup powdered sugar</li>
+   <li>½ teaspoon vanilla extract</li>
+</ul>
     </p>
 
     <p>
