--- a/recipes/Cinnamon_Rolls.html
+++ b/recipes/Cinnamon_Rolls.html
@@ -24,20 +24,20 @@
                 </ul> </p>
         
     <p>
-        For the filling:
+        <ul>For the filling:
             <li>2/3 cup dark brown sugar (light brown sugar also works)</li>
                 <li>1 ½ tablespoons ground cinnamon</li>
                     <li>¼ cup butter, softened</li>
+                </ul>
     </p>
     
     <p>
-
-    <ul>For the cream cheese frosting:
-   <li>4 oz cream cheese, softened</li>
-   <li>3 tablespoons butter, softened</li>
-   <li>¾ cup powdered sugar</li>
-   <li>½ teaspoon vanilla extract</li>
-</ul>
+        <ul>For the cream cheese frosting:
+            <li>4 oz cream cheese, softened</li>
+            <li>3 tablespoons butter, softened</li>
+            <li>¾ cup powdered sugar</li>
+            <li>½ teaspoon vanilla extract</li>
+        </ul>
     </p>
 
     <p>
