--- a/recipes/Cinnamon_Rolls.html
+++ b/recipes/Cinnamon_Rolls.html
@@ -24,11 +24,12 @@
                 </ul> </p>
         
     <p>
-        <ul>For the filling:
+        <h1>For the filling:</h1>
+        <ul>
             <li>2/3 cup dark brown sugar (light brown sugar also works)</li>
-                <li>1 ½ tablespoons ground cinnamon</li>
-                    <li>¼ cup butter, softened</li>
-                </ul>
+            <li>1 ½ tablespoons ground cinnamon</li>
+            <li>¼ cup butter, softened</li>
+        </ul>
     </p>
     
     <p>
